Fixed header and footer button alignment in editor

--- a/ghost/admin/app/styles/components/settings-menu.css
+++ b/ghost/admin/app/styles/components/settings-menu.css
@@ -6,7 +6,7 @@
 
 .settings-menu-toggle {
     position: absolute;
-    top: 31px;
+    top: 30px;
     right: 24px;
     z-index: 9999;
     margin-right: 0 !important;
